# aoc-2023

./: Cargo.toml  material.mtl
src/: day1.rs  main.rs
