[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
once_cell = "1.19.0"
rayon = "1.8.0"
regex = "1.10.2"
transpose = "0.2.2"
